Fix broken styles in different parts of the app

--- a/src/components/CoinHero/CoinHero.module.css
+++ b/src/components/CoinHero/CoinHero.module.css
@@ -10,6 +10,10 @@
   gap: 2rem;
 }
 
+.coin-details {
+  margin: 3rem;
+}
+
 .coin-details__header img {
   width: 15rem;
   height: 15rem;
