--- a/src/components/WalletTransactions/WalletTransactions.module.css
+++ b/src/components/WalletTransactions/WalletTransactions.module.css
@@ -3,51 +3,58 @@
   overflow-x: hidden;
   flex: 3;
   color: var(--color-primary-lightest);
-  margin-top: 3rem;
+  margin-top: 1.5rem;
+  max-height: 45rem;
 }
 
 .transactions-table h4 {
-  color: var(--color-primary-light)
+  color: var(--color-primary-light);
 }
 
-.transactions-table > table{
+.transactions-table > table {
   width: 100%;
-  font-size: var(--font-size-xs)
+  font-size: var(--font-size-xs);
 }
 
 .transactions-table > table > thead {
   text-align: justify;
-  color: var(--color-primary-lighter)
+  color: var(--color-primary-lighter);
 }
 
 .transactions-table > table > tbody > tr > td,
 .transactions-table > table > tfoot > tr > td,
 .transactions-table > table > thead > tr > th {
-  padding: .4rem;
+  padding: 0.4rem;
 }
 
 .centered {
   display: flex;
   justify-content: center;
-  gap: .2rem; 
+  gap: 0.2rem;
 }
 
 .action-btn {
   border: 1px solid var(--color-primary-lightest);
   background-color: var(--color-light);
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 5px;
   cursor: pointer;
 }
 
+@media only screen and (max-width: 1600px) {
+  .transactions-table {
+    margin-top: 1rem;
+  }
+}
+
 @media only screen and (max-width: 1200px) {
   .transactions-table {
-    max-height: 20vh;
+    max-height: 20rem;
   }
 
   .transactions-table h4 {
     position: sticky;
     top: 0;
-    background-color: var(--color-light)
+    background-color: var(--color-light);
   }
 }
