--- a/src/components/WalletsList/WalletsList.module.css
+++ b/src/components/WalletsList/WalletsList.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: var(--color-primary-light)
+  color: var(--color-primary-light);
 }
 
 .list {
@@ -119,7 +119,7 @@
 .empty-wallet img {
   position: absolute;
   height: 50rem;
-  opacity: 0.2;
+  opacity: 0.1;
   top: 20rem;
   right: 50%;
   z-index: -1;
@@ -127,10 +127,11 @@
   transform: translateY(-75%) translateX(50%) rotate(-10deg);
 }
 
-@media only screen and (min-width: 1200px) {
-}
-
 @media only screen and (max-width: 1024px) {
+  .list {
+    gap: 1.5rem;
+  }
+
   .empty-wallet {
     top: 25rem;
   }
@@ -139,6 +140,10 @@
 @media only screen and (max-width: 768px) {
   .empty-wallet {
     top: 30rem;
+  }
+
+  .empty-wallet img {
+    opacity: 0.05;
   }
 }
 
